@@ -3,6 +3,9 @@ Changes since revision 316:
 *Internet Explorer (MSHTML) virtualBuffers now render IFrames (which means that user accounts in control panel now shows more of its content).
 *Some more work to stop dialogs crashing (possibly)
  *Fixed bug where combo boxes and sliders etc were speaking their value twice when it changed.
+*Support for NVDA to fall back to using normal edit control support on a rich edit control that fails to work properly (example: log in fileZilla).
+*Increased the size of the NVDA interface window so that more text can fit on a line.
+*Added version and copyright info to the top of the built-in quick-start document.
 
 Changes since revision 315:
 *Fixed bug where NVDA would not notify of a foreground change sometimes after leaving a menu (example: shutdown or control pannel in the start menu).
